Added Create using Ajax in Product

--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -5,3 +5,11 @@
 
 <h2>Index</h2>
 
+<div id="tableCont">
+
+    @{
+        Html.RenderAction("ProductTable");
+        //Html.RenderAction("Create");
+    }
+
+</div>
