--- a/ClothBazar.Web/Views/Shared/_Layout.cshtml
+++ b/ClothBazar.Web/Views/Shared/_Layout.cshtml
@@ -20,13 +20,14 @@
 
     <!-- Colors -->
     <link rel="stylesheet" type="text/css" href="~/Content/stylesheets/colors/color1.css" id="colors">
-                                                
-    <!-- Animation Style -->                    
+
+    <!-- Animation Style -->
     <link rel="stylesheet" type="text/css" href="~/Content/stylesheets/animate.css">
 
 
     <!-- Favicon and touch icons  -->
-    <link href="favicon.png" rel="shortcut icon">
+    <link href="favicon.ico" rel="shortcut icon">
+    <script src="~/Content/javascript/jquery.min.js"></script>
 
     <!--[if lt IE 9]>
         <script src="javascript/html5shiv.js"></script>
@@ -222,7 +223,7 @@
 
     </div>
     <!-- Javascript -->
-    <script src="~/Content/javascript/jquery.min.js"></script>
+
     <script src="~/Content/javascript/tether.min.js"></script>
     <script src="~/Content/javascript/bootstrap.min.js"></script>
     <script src="~/Content/javascript/jquery.easing.js"></script>
