--- a/ClothBazar.Web/Views/Home/Index.cshtml
+++ b/ClothBazar.Web/Views/Home/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@model ClothBazar.Web.ViewModel.HomeViewModel
-    @{ 
-        var firstCategory = Model.Categories.Where(c => c.ImageURL != null).First();
-    }
-
-<div class="boxed">
+﻿<div class="boxed">
     <!-- SLIDER -->
     <div class="rev_slider_wrapper fullwidthbanner-container">
         <div id="rev-slider1" class="rev_slider fullwidthabanner">
@@ -191,9 +186,9 @@
                         <div class="item data-effect-item">
                             <div class="inner">
                                 <div class="thumb">
-                                    <img src="@firstCategory.ImageURL" alt="Image">
+                                    <img src="~/Content/images/image-box/imgbox-1-375x500.jpg" alt="Image">
                                     <div class="elm-btn">
-                                        <a href="#" class="themesflat-button bg-white width-150">@firstCategory.Name</a>
+                                        <a href="#" class="themesflat-button bg-white width-150">For Men’s</a>
                                     </div>
                                     <div class="overlay-effect bg-color-1"></div>
                                 </div>
