something wrong picture code not in this

--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -8,12 +8,11 @@
 <form id="createProductForm">
 
     <label>Category</label>
-    <select>
+    <select name="Category">
         @foreach (var item in Model)
         {
-            <option></option>
+            <option value="@item.ID">@item.Name</option>
         }
-
     </select>
     <br />
     <label>Name</label>
