--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -30,7 +30,7 @@
                 <tr>
                     <td> @item.Name </td>
                     <td> @item.Price </td>
-                    <td>  category</td>
+                    <td> @item.Category </td>
                     <td>
                         <button type="button" class="editBtn" data-id="@item.ID">Edit</button>
                         <button type="button" class="deleteBtn" data-id="@item.ID">Delete</button>
