add bootstrap forms in create product and some styling on tables all working well

--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -3,17 +3,19 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container">
 
-<div id="tableCont">
+    <div id="tableCont">
 
-    @{
-        Html.RenderAction("ProductTable");
-        //Html.RenderAction("Create");
-    }
+        @{
+            Html.RenderAction("ProductTable");
+            //Html.RenderAction("Create");
+        }
 
-</div>
+    </div>
 
-<div id="actionCont">
+    <div id="actionCont">
+
+    </div>
 
 </div>
