--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -4,29 +4,33 @@
 }
 
 <h2>Create Product</h2>
-
 <form id="createProductForm">
+    <div class="form-group">
+        <label for="Name">Name</label>
+        <input type="text" name="Name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Enter Name" />
+    </div>
+    <div class="form-group">
+        <label for="Description">Description</label>
+        <input type="text" name="Description" class="form-control" id="Description" placeholder="Enter Description.">
+    </div>
+    <div class="form-group">
+        <label for="Price">Price</label>
+        <input type="text" name="Price" class="form-control" id="Price" placeholder="Enter Price.">
+    </div>
+    <div class="form-group">
+        <label for="Category">Category</label>
+        <select name="CategoryID" class="form-control">
+            @foreach (var category in Model)
+            {
+                <option value="@category.ID">@category.Name</option>
+            }
+        </select>
+    </div>
 
-    <label>Category</label>
-    <select name="CategoryID">
-        @foreach (var category in Model)
-        {
-            <option value="@category.ID">@category.Name</option>
-        }
-    </select>
-    <br />
-    <label>Name</label>
-    <input name="Name" />
-    <br />
-    <label>Description</label>
-    <input name="Description" />
-    <br />
-    <label>Price</label>
-    <input name="Price" />
-    <br />
-
-    <button type="button" id="createBtn">Save</button>
+    <button type="button" id="createBtn" class="btn btn-danger">Save</button>
 </form>
+
+
 
 <script>
     $("#createBtn").click(function () {
