--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -3,20 +3,29 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create Category</h2>
-<form method="post">
-    <label>Name</label>
-    <input name="Name" />
-    <br />
-    <label>Description</label>
-    <input name="Description" />
-    <br />
-    <input type="hidden" id="imageURL" name="ImageURL"/>
-    <input type="file" name="Image" id="imgUpload" accept=".png, .jpg, .jpeg"/>
-    <img id="imgCategory" height="100" width="80"/>
-    <br />
-    <button type="submit">Save</button>
-</form>
+<h2>Create New Category</h2>
+
+<div>
+    <form id="createCategoryForm">
+        <div class="form-group">
+            <label for="Name">Name</label>
+            <input type="text" name="Name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Enter Name" />
+        </div>
+        <div class="form-group">
+            <label for="Description">Description</label>
+            <input type="text" name="Description" class="form-control" id="Description" placeholder="Enter Description.">
+        </div>
+        <div class="form-group">
+            <label for="Price">Price</label>
+            <input type="hidden" id="imageURL" name="ImageURL" />
+            <input type="file" name="Image" id="imgUpload" accept=".png, .jpg, .jpeg" />
+            <img id="imgCategory" height="100" width="80" />
+        </div>
+
+        <button type="button" id="btnCategoryCreate" class="btn btn-danger">Save</button>
+    </form>
+
+</div>
 
 <script>
     $("#imgUpload").change(function () {
@@ -29,22 +38,39 @@
             formData.append("Photo", file); // put value into form data
         }
 
-            $.ajax({
-                type: 'POST',
-                url: '/Shared/UploadImage',
-                dataType: 'json',
-                data: formData,
-                contentType: false,
-                processData: false
+        $.ajax({
+            type: 'POST',
+            url: '/Shared/UploadImage',
+            dataType: 'json',
+            data: formData,
+            contentType: false,
+            processData: false
+        })
+            .done(function (response) {
+                //debugger;
+                $("#imgCategory").attr("src", response.ImageUrl)
+                $("#imageURL").val(response.ImageUrl);
             })
-                .done(function (response) {
-                    debugger;
-                    $("#imgCategory").attr("src", response.ImageUrl)
-                    $("#imageURL").val(response.ImageUrl);
-                })
-                .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                    alert("Fail");
-                });
-        
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
+
     });
+
+    $("#btnCategoryCreate").click(function () {
+
+        $.ajax({
+            type: 'POST',
+            url: '/Category/Create',
+            data: $("#createCategoryForm").serialize()
+        })
+            .done(function (response) {
+                $("#categoryTableCont").html(response);
+                $("#categoryActionCont").html("");
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
+    });
+
 </script>
