--- a/ClothBazar.Web/Views/Category/Index.cshtml
+++ b/ClothBazar.Web/Views/Category/Index.cshtml
@@ -1,11 +1,20 @@
-﻿ @model List<ClothBazar.Entities.Category>
+﻿
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>List of Category</h2>
+<div class="container">
 
-@foreach (var category in Model)
-{
-    <h2> @category.Name </h2>
-}
+    <div id="categoryTableCont">
+
+        @{
+            Html.RenderAction("CategoryTable");
+        }
+
+    </div>
+
+    <div id="categoryActionCont">
+
+    </div>
+
+</div>
