--- a/ClothBazar.Web/Views/Shared/_Layout.cshtml
+++ b/ClothBazar.Web/Views/Shared/_Layout.cshtml
@@ -80,11 +80,12 @@
                         <nav id="mainnav" class="mainnav">
                             <ul class="menu">
                                 <li class="active">
-                                    <a href="index.html">HOME</a>
+                                    <a href="/home/index">HOME</a>
                                     <ul class="submenu">
                                         <li class="active"><a href="index.html">Homepage Style 1</a></li>
                                         <li><a href="index-v2.html">Homepage Style 2</a></li>
                                         <li><a href="index-v3.html">Homepage Style 3</a></li>
+
                                         <li><a href="index-v4.html">Homepage Style 4</a></li>
                                         <li><a href="index-v5.html">Homepage Style 5</a></li>
                                         <li><a href="index-v6.html">Homepage Style 6</a></li>
@@ -94,6 +95,8 @@
                                         <li><a href="index-v10.html">Homepage Style 10</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="/Category/Index"> Categories </a></li>
+                                <li><a href="/Product/Index"> Products </a></li>
                                 <li>
                                     <a href="shop-3col.html">SHOP</a>
                                     <ul class="submenu">
