--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -1,9 +1,14 @@
 ﻿
 @{
     ViewBag.Title = "Create";
+
 }
 
-<h2>Create New Category</h2>
+<div class="title-section">
+    <h2 class="title">
+       Create New Category
+    </h2>
+</div>
 
 <div>
     <form id="createCategoryForm">
@@ -16,12 +21,16 @@
             <input type="text" name="Description" class="form-control" id="Description" placeholder="Enter Description.">
         </div>
         <div class="form-group">
-            <label for="Price">Price</label>
+            <label for="Image">Image</label>
             <input type="hidden" id="imageURL" name="ImageURL" />
             <input type="file" name="Image" id="imgUpload" accept=".png, .jpg, .jpeg" />
             <img id="imgCategory" height="100" width="80" />
         </div>
-
+        <div class="form-group">
+            <label for="isFeatured">Description</label>
+            <input type="radio" name="isFeatured" class="form-control" value="true">True
+            <input type="radio" name="isFeatured" class="form-control" value="false">False
+        </div>
         <button type="button" id="btnCategoryCreate" class="btn btn-danger">Save</button>
     </form>
 
