--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -3,28 +3,45 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create Product</h2>
+<div class="title-section">
+    <h2 class="title">
+        Create New Product
+    </h2>
+</div>
+
 <form id="createProductForm">
-    <div class="form-group">
-        <label for="Name">Name</label>
-        <input type="text" name="Name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Enter Name" />
+    <div class="row>
+        <div class="col-md-8">
+            <div class="form-group">
+                <label for="Name">Name</label>
+                <input type="text" name="Name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Enter Name" />
+            </div>
+            <div class="form-group">
+                <label for="Description">Description</label>
+                <input type="text" name="Description" class="form-control" id="Description" placeholder="Enter Description.">
+            </div>
+            <div class="form-group">
+                <label for="Price">Price</label>
+                <input type="text" name="Price" class="form-control" id="Price" placeholder="Enter Price.">
+            </div>
+            <div class="form-group">
+                <label for="Category">Category</label>
+                <select name="CategoryID" class="form-control">
+                    @foreach (var category in Model)
+                    {
+                        <option value="@category.ID">@category.Name</option>
+                    }
+                </select>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="Description">Description</label>
-        <input type="text" name="Description" class="form-control" id="Description" placeholder="Enter Description.">
-    </div>
-    <div class="form-group">
-        <label for="Price">Price</label>
-        <input type="text" name="Price" class="form-control" id="Price" placeholder="Enter Price.">
-    </div>
-    <div class="form-group">
-        <label for="Category">Category</label>
-        <select name="CategoryID" class="form-control">
-            @foreach (var category in Model)
-            {
-                <option value="@category.ID">@category.Name</option>
-            }
-        </select>
+    <div class="col-md-4">
+        <div class="form-group">
+            <label for="Image">Image</label>
+            <input type="hidden" id="productImageURL" name="ImageURL" />
+            <input type="file" name="Image" id="imgUpload" accept=".png, .jpg, .jpeg" />
+            <img id="imgProduct" class="img-thumbnail img-fluid" />
+        </div>
     </div>
 
     <button type="button" id="createBtn" class="btn btn-danger">Save</button>
@@ -33,6 +50,35 @@
 
 
 <script>
+    $("#imgUpload").change(function () {
+        var element = this; // refer to file upload field
+        var formData = new FormData();// create new form data object
+        var totalFiles = element.files.length; // check total number of files in element
+
+        for (var i = 0; i < totalFiles; i++) { // initliazie files one by one
+            var file = element.files[i];
+            formData.append("Photo", file); // put value into form data
+        }
+
+        $.ajax({
+            type: 'POST',
+            url: '/Shared/UploadImage',
+            dataType: 'json',
+            data: formData,
+            contentType: false,
+            processData: false
+        })
+            .done(function (response) {
+                //debugger;
+                $("#imgProduct").attr("src", response.ImageUrl)
+                $("#productImageURL").val(response.ImageUrl);
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
+
+    });
+
     $("#createBtn").click(function () {
         
         $.ajax({
