--- a/ClothBazar.Web/Views/Product/Edit.cshtml
+++ b/ClothBazar.Web/Views/Product/Edit.cshtml
@@ -1,29 +1,97 @@
 ﻿@model Product
-@{
+@{ 
     ViewBag.Title = "Edit";
+    var ImageURLCheck = !string.IsNullOrEmpty(Model.ImageURL) ? Model.ImageURL : "/Content/images/default image.png";
 }
 
-<h2>Edit Product</h2>
+<div class="title-section">
+    <h2 class="title">
+        Edit Product
+    </h2>
+</div>
 
 <form id="editProductForm">
-    <input name="ID" value="@Model.ID" type="hidden"/>
-    <label>Name</label>
-    <input name="Name" value="@Model.Name" />
-    <br />
-    <label>Description</label>
-    <input name="Description" value="@Model.Description"/>
-    <br />
-    <label>Price</label>
-    <input name="Price" value="@Model.Price"/>
-    <br />
-    <label>Category</label>
-    <input name="Category" value="@Model.Category"/>
-    <br />
-    <button type="button" id="updateBtn">Update</button>
+    <div class="row">
+        <div class="col-md-6">
+            <input type="hidden" name="ID" value="@Model.ID" />
+            <div class="form-group">
+                <label for="Name">Name</label>
+                <input type="text" name="Name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Enter Name" value="@Model.Name" />
+            </div>
+            <div class="form-group">
+                <label for="Description">Description</label>
+                <input type="text" name="Description" class="form-control" id="Description" placeholder="Enter Description." value="@Model.Description">
+            </div>
+            <div class="form-group">
+                <label for="Price">Price</label>
+                <input type="text" name="Price" class="form-control" id="Price" placeholder="Enter Price." value="@Model.Price">
+            </div>
+            <div class="form-group">
+                <label for="Category">Category</label>
+                @*<select name="CategoryID" class="form-control">
+                   
+                        @foreach (var category in Model)
+                        {
+                            <option value="@category.ID">@category.Name</option>
+                        }
+
+                </select>*@
+            </div>
+        </div>
+
+
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="Image">Select New Image</label>
+                <input type="hidden" id="imageURL" name="ImageURL" />
+                <input type="file" name="Image" id="imgUpload" accept=".png, .jpg, .jpeg" class="form-control-file" />
+
+            </div>
+            <div class="form-group">
+                <div class="thumb">
+                    <img src="@ImageURLCheck" class="img-thumbnail img-fluid" id="imgProduct" />
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <button type="button" id="btnUpdateProduct" class="btn btn-danger">Save</button>
 </form>
 
+
+
 <script>
-    $("#updateBtn").click(function () {
+    $("#imgUpload").change(function () {
+        var element = this; // refer to file upload field
+        var formData = new FormData();// create new form data object
+        var totalFiles = element.files.length; // check total number of files in element
+
+        for (var i = 0; i < totalFiles; i++) { // initliazie files one by one
+            var file = element.files[i];
+            formData.append("Photo", file); // put value into form data
+        }
+
+        $.ajax({
+            type: 'POST',
+            url: '/Shared/UploadImage',
+            dataType: 'json',
+            data: formData,
+            contentType: false,
+            processData: false
+        })
+            .done(function (response) {
+                //debugger;
+                $("#imgProduct").attr("src", response.ImageUrl)
+                $("#imageURL").val(response.ImageUrl);
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
+
+    });
+
+    $("#btnUpdateProduct").click(function () {
 
         $.ajax({
             type: 'POST',
