--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -24,9 +24,11 @@
 </div>
 
 <!--showing all products in table-->
-
-<h2>Product Table</h2>
-
+<div class="title-section">
+    <h2 class="title">
+        Products
+    </h2>
+</div>
 <div>
     <table class="table table-striped">
         <thead>
@@ -65,73 +67,83 @@
 
 </div>
 
-<script>
-    $("#searchBtn").click(function () { // select element by id
-        var searchVal = $("#searchTxt").val();
+<div>
+    <script>
+        $("#searchBtn").click(function () { // select element by id
+            var searchVal = $("#searchTxt").val();
 
-        $.ajax({ // start ajax function
-            url: '/Product/ProductTable', // path for which action method wants to call
-            data: {
-                search: searchVal  // put any data from current view
-            }
-        })
-            .done(function (response) { // if task is completed then this piece of code runs
-                $("#tableCont").html(response);
-            })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) { // if task is failed then this piece of code runs
-                alert("Fail");
-            });
-    });
-
-    $("#newBtn").click(function () {
-
-        $.ajax({
-            url: '/Product/Create',
-        })
-            .done(function (response) {
-                console.log(response);
-                $("#actionCont").html(response);
-            })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("Fail");
-            });
-    });
-
-    $(".editBtn").click(function () {
-        //debugger;
-        $.ajax({
-            url: '/Product/Edit',
-            data: {
-                ID: $(this).attr('data-id')
-            }
-        })
-            .done(function (response) {
-                $("#actionCont").html(response);
-            })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("Fail");
-            });
-    });
-
-    $(".deleteBtn").click(function () {
-        //debugger;
-        var confirmDelete = confirm("Are you sure want to delete this product.");
-        if (confirmDelete) {
-            $.ajax({
-                type: 'POST',
-                url: '/Product/Delete',
+            $.ajax({ // start ajax function
+                url: '/Product/ProductTable', // path for which action method wants to call
                 data: {
-                    ID: $(this).attr('data-id') // define custom attribute for using unique value in foreach loop
+                    search: searchVal  // put any data from current view
                 }
             })
-                .done(function (response) {
+                .done(function (response) { // if task is completed then this piece of code runs
                     $("#tableCont").html(response);
+                })
+                .fail(function (XMLHttpRequest, textStatus, errorThrown) { // if task is failed then this piece of code runs
+                    alert("Fail");
+                });
+        });
+
+        $("#newBtn").click(function () {
+
+            $.ajax({
+                url: '/Product/Create',
+            })
+                .done(function (response) {
+                    console.log(response);
+                    $("#actionCont").html(response);
+                    focusAction();
                 })
                 .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                     alert("Fail");
                 });
-        }
-       
-    });
+        });
 
-</script>
+        $(".editBtn").click(function () {
+            //debugger;
+            $.ajax({
+                url: '/Product/Edit',
+                data: {
+                    ID: $(this).attr('data-id')
+                }
+            })
+                .done(function (response) {
+                    $("#actionCont").html(response);
+                    focusAction();
+                })
+                .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                    alert("Fail");
+                });
+        });
+
+        $(".deleteBtn").click(function () {
+            //debugger;
+            var confirmDelete = confirm("Are you sure want to delete this product.");
+            if (confirmDelete) {
+                $.ajax({
+                    type: 'POST',
+                    url: '/Product/Delete',
+                    data: {
+                        ID: $(this).attr('data-id') // define custom attribute for using unique value in foreach loop
+                    }
+                })
+                    .done(function (response) {
+                        $("#tableCont").html(response);
+                    })
+                    .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                        alert("Fail");
+                    });
+            }
+
+        });
+
+        function focusAction() {
+            $("html, body").animate({
+                scrollTop: $("#actionCont").offset().top - 100
+            }, 1000);
+        }
+
+    </script>
+</div>
