Add to cart page using cookies and sweet alert on delete button.

--- a/ClothBazar.Web/Views/Category/CategoryTable.cshtml
+++ b/ClothBazar.Web/Views/Category/CategoryTable.cshtml
@@ -39,7 +39,7 @@
                     <tr>
                         <td> @category.Name </td>
                         <td> @category.Description </td>
-                        <td> @category.Products.Count </td>
+                        <td> @*@category.Products.Count*@ </td>
                         <td>
                             <button type="button" class="editBtn" data-id="@category.ID">Edit</button>
                             <button type="button" class="deleteBtn" data-id="@category.ID">Delete</button>
@@ -78,25 +78,36 @@
     });
 
     $(".deleteBtn").click(function () {
-        //debugger;
-        var confirmDelete = confirm("Are you sure want to delete this product.");
-        if (confirmDelete) {
-            $.ajax({
-                type: 'POST',
-                url: '/Category/Delete',
-                data: {
-                    ID: $(this).attr('data-id') // define custom attribute for using unique value in foreach loop
+
+        swal({
+            title: "Confirm?",
+            text: "Are you sure want to delete this product.",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+        })
+            .then((willDelete) => {
+                if (willDelete) {
+                    $.ajax({
+                        type: 'POST',
+                        url: '/Category/Delete',
+                        data: {
+                            ID: $(this).attr('data-id') // define custom attribute for using unique value in foreach loop
+                        }
+                    })
+                        .done(function (response) {
+                            $("#categoryTableCont").html(response);
+                            swal("Record has been Deleted.", {
+                                icon: "success",
+                            });
+                        })
+                        .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                            alert("Fail");
+                        });
+
+
                 }
-            })
-                .done(function (response) {
-                    $("#categoryTableCont").html(response);
-
-                })
-                .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                    alert("Fail");
-                });
-        }
-
+            });
     });
 
     $("#btnNewCategory").click(function () {
