--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -59,7 +59,6 @@
                     <td>
                         <button type="button" class="editBtn" data-id="@item.ID">Edit</button>
                         <button type="button" class="deleteBtn" data-id="@item.ID">Delete</button>
-                        <button type="button" class="btnAddToCart" data-id="@item.ID">Add To Cart</button>
                     </td>
                 </tr>
             }
@@ -120,16 +119,10 @@
         });
 
         $(".deleteBtn").click(function () {
-            swal({
-                title: "Confirm?",
-                text: "Are you sure want to delete this product.",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
-            })
-                .then((willDelete) => {
-                    if (willDelete) {
-                        $.ajax({
+            //debugger;
+            var confirmDelete = confirm("Are you sure want to delete this product.");
+            if (confirmDelete) {
+                $.ajax({
                     type: 'POST',
                     url: '/Product/Delete',
                     data: {
@@ -138,28 +131,14 @@
                 })
                     .done(function (response) {
                         $("#tableCont").html(response);
-                        swal("Record has been Deleted.", {
-                            icon: "success",
-                        });
                     })
                     .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                         alert("Fail");
                     });
-
-                        
-                    } 
-                });
-        });
-
-        var products = [];
-
-        $(".btnAddToCart").click(function () {
-            var productID = $(this).attr("data-id");
-            products.push(productID);
-            $.cookie("CartProducts", products.join('-'), { path:"/" });
-            alert("Product Added To Cart.");
+            }
 
         });
+
         function focusAction() {
             $("html, body").animate({
                 scrollTop: $("#actionCont").offset().top - 100
