--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <form id="createProductForm">
-    <div class="row>
+    <div class="row">
         <div class="col-md-8">
             <div class="form-group">
                 <label for="Name">Name</label>
