--- a/ClothBazar.Web/Views/Shared/_Layout.cshtml
+++ b/ClothBazar.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+   ConfigurationsService configurationsService = new ConfigurationsService();
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Basic Page Needs -->
@@ -160,6 +164,41 @@
             @RenderBody()
         </div>
 
+        <section class="flat-row mail-chimp">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="text">
+                            <h3>Sign up for Send Newsletter</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="subscribe clearfix">
+                            <form action="#" method="post" accept-charset="utf-8" id="subscribe-form">
+                                <div class="subscribe-content">
+                                    <div class="input">
+                                        <input type="email" name="subscribe-email" placeholder="Your Email">
+                                    </div>
+                                    <div class="button">
+                                        <button type="button">SUBCRIBE</button>
+                                    </div>
+                                </div>
+                            </form>
+                            <ul class="flat-social">
+                           
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul><!-- /.flat-social -->
+                        </div><!-- /.subscribe -->
+                    </div>
+                </div>
+            </div>
+        </section><!-- /.mail-chimp -->
+
+
         <footer class="footer">
             <div class="container">
                 <div class="row">
@@ -199,8 +238,8 @@
                                 <a href="index.html"><img src="~/Content/images/logo@2x.png" alt="image" width="107" height="24"></a>
                             </div>
                             <ul class="flat-contact">
-                                <li class="address">112 Kingdom, NA 12, New York</li>
-                                <li class="phone">+12 345 678 910</li>
+                                <li class="address">configurationsService.GetConfig("MobileNo")</li>
+                                <li class="phone">@configurationsService.GetConfigurationByKey("Company Mobile No").Value</li>
                                 <li class="email">infor.deercreative@gmail.com</li>
                             </ul><!-- /.flat-contact -->
                         </div><!-- /.widget -->
